compiler/testData/ir/interpreter/enums3.kt
import kotlin.text.*

const val a = RegexOption.IGNORE_CASE.<!EVALUATED: `IGNORE_CASE`!>name<!>
const val b = RegexOption.IGNORE_CASE.<!EVALUATED: `0`!>ordinal<!>
const val c = RegexOption.MULTILINE.<!EVALUATED: `MULTILINE`!>name<!>
const val d = RegexOption.MULTILINE.<!EVALUATED: `1`!>ordinal<!>
const val e = <!EVALUATED: `true`!>RegexOption.IGNORE_CASE == RegexOption.IGNORE_CASE<!>
const val f = <!EVALUATED: `true`!>RegexOption.IGNORE_CASE != RegexOption.MULTILINE<!>
const val g = RegexOption.IGNORE_CASE.<!EVALUATED: `IGNORE_CASE`!>toString()<!>
